Add timestamp to all BuildSlaveEvents and remove duplication of StampedeId/BuildSlaveRunId.
Summary: [stampede] Add timestamp to all BuildSlaveEvents and remove duplication of StampedeId/BuildSlaveRunId.

Test Plan: greenlanternna

Reviewed By: shivanker

fbshipit-source-id: 7324d34